# verlihub

VerliAdmin/: COPYING  COPYING-CZ  COPYING-DE  COPYING-IT  COPYING-PL  Nille_install_VerliAdmin.txt  about.php  addreg.php  banlist.php  bantest.php  changelog.txt  chpass.php  command_line.php  commands.php  config.php  config.php.example  conn_types.php  default.css  defaultconf.php  delreg.php  editchatroom.php  editforbid.php  editplugin.php  editsetuplist.php  edittrigger.php  edittype.php  encoding.php  file_trigger.php  flags.php  footer.php  header.php  index.php  kicklist.php  lang2sql.php  lang_center.php  language.php  library.php  login.php  logout.php  menu_common.php  (+23 more)
VerliAdmin/img/: pspbrwse.jbf
VerliAdmin/js/: confirm.js  rollover.js  tooltip.js
VerliAdmin/language/: cz.php  de.php  en.php  fr.php  hun.php  it.php  lv.php  pl.php  ro.php  ru.php  sw.php
VerliAdmin/lib/: mysql.php  mysqli.php
VerliAdmin/scripts/: banlist.sql  file_trigger.sql  kicklist.sql  pi_messages.sql  pi_stats.sql  reglist.sql  setuphelp.sql  setuplist.sql  temp_rights.sql  unbanlist.sql  va_unban.sql
gagrange/: Makefile.in  README  aclocal.m4  configure  configure.in  mkinstalldirs
gagrange/src/: Makefile.am  Makefile.in  cconsole.cpp  cconsole.h  cgagranges.cpp  cgagranges.h  cpigagrange.cpp  cpigagrange.h
