
# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
lib_LTLIBRARIES =  libgagrange_pi.la
libgagrange_pi_la_LDFLAGS = -module 
libgagrange_pi_la_LIBADD = $(VERLIHUB_LIBS)
libgagrange_pi_la_SOURCES = cpigagrange.h cpigagrange.cpp cgagranges.h cgagranges.cpp cconsole.cpp cconsole.h
